--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -48,7 +48,7 @@
                 </div>
             <div class="submit-row">
                 <input type="submit" value="Signup" name="_save">
-                <a href="/login">Login</a>
+                <a href="{% url 'login' %}">Login</a>
             </div>
         </form>
     </div>
