--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,3 +1,4 @@
+{% load static from staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,25 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>{% block head_title %}Codebytes{% endblock head_title %}</title>
-	<link rel="stylesheet" type="text/css" href="/static/main.css">
-	<link rel="stylesheet" type="text/css" href="/static/index.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'index.css' %}">
 	{% block css %}{% endblock css %}
 </head>
 <body>
 	<header>
 		<div class="frame_001">
 			<div class="frame_002">
-				<a href="/"><h1>CodeBytes</h1><h3>Intresting Facts</h3></a>
+				<a href="{% url 'home' %}"><h1>CodeBytes</h1><h3>Intresting Facts</h3></a>
 			</div>
 			<div class="frame_003">
 				<ul>
-					<li><a href="/">Home</a></li>
+					{% if user.is_authenticated %}
+						<li>Welcome <a href="{% url 'welcome' %}">{{ user.first_name }}</a></li>
+					{% endif %}
+					<li><a href="{% url 'home' %}">Home</a></li>
 					<li><a href="mailto:pranjal0819@gmail.com">Contact Us</a></li>
 					{% if user.is_authenticated %}
-						<a href="/logout" style="color: red">Logout</a>
+						<a href="{% url 'logout' %}" style="color: red">Logout</a>
 					{% else %}
-						<li><a href="/login">Login</a></li>
-						<li><a href="/signup">Signup</a></li>
+						<li><a href="{% url 'login' %}">Login</a></li>
+						<li><a href="{% url 'signup' %}">Signup</a></li>
 					{% endif %}
 				</ul>
 			</div>
@@ -38,7 +42,7 @@
 		<div class="frame_104">
 			<div class="frame_105">
 				<div class="frame_101">
-					<a href="/"><h1>CodeBytes</h1><h3>Intresting Facts</h3></a>
+					<a href="{% url 'home' %}"><h1>CodeBytes</h1><h3>Intresting Facts</h3></a>
 				</div>
 				<div class="frame_102">
 					<ul>
@@ -52,7 +56,7 @@
 			<div class="frame_103">
 				<ul>
 					<li><a href="">About Us</a></li><br>
-					<li><a href="/feedback">Feedback</a></li><br>
+					<li><a href="{% url 'feedback' %}">Feedback</a></li><br>
 					<li><a href="mailto:pranjal0819@gmail.com">Contact Us</a></li><br>
 					<li><a href="">Codebytes Team</a></li><br>
 					<li><a href="">Privacy Policy</a></li><br>
