--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -26,7 +26,7 @@
             {% endif %}
             <div class="submit-row">
                 <input type="submit" value="Login" name="_save">
-                <a href="/signup">Signup</a>
+                <a href="{% url 'signup' %}">Signup</a>
             </div>
         </form>
     </div>
