--- a/src/templates/view_paper.html
+++ b/src/templates/view_paper.html
@@ -10,36 +10,47 @@
 {% block content %}
 <div class="frame_artical">
 	<p>
-		Welcome {{ user.username }}
-		<br><br>
+		Welcome {{ user.first_name }}
+		<br>
+		<a href="{% url 'submit_paper' %}">Submit Paper</a>
+		<br>
 		<form action="" method="post"><input type="hidden">
 			{% csrf_token %}
-			<fieldset class="module aligned ">
-	    		<div class="form-row field-name">
-					<label class="required" for="id_name">Name:</label>
-	                {{ record.name }}
-	            </div>
-		        <div class="form-row field-email">
-		            <label class="required" for="id_email">Email:</label>
-		            {{ record.email }}
-		        </div>
-		        <div class="form-row field-mobileNumber">
-		            <label class="required" for="id_mobileNumber">Mobile Number:</label>
-		            {{ record.mobileNumber }}
-		        </div>
-		        <div class="form-row field-title">
-            		<label class="required" for="id_title">Title:</label>
-                    {{ record.title }}
-                </div>
-                <div class="form-row field-body">
-            		<label class="required" for="id_body">Body:</label>
-                    {{ record.body }}
-                </div>
-		        <div class="form-row field-file">
-		            <label class="required" for="id_file">File:</label>
-		            <a href="/media/{{ record.file }}" target="_blank">{{ record.file }}</a>
-		        </div>
-			</fieldset>
+			{% if messages %}
+				<ul>
+	                {% for m in messages %}
+	                	<li>{{ m }}</li>
+	                {% endfor %}
+            	</ul>
+			{% endif %}
+			{% for r in record %}
+				<fieldset class="module aligned ">
+		    		<div class="form-row field-name">
+						<label class="required" for="id_name">Name:</label>
+		                {{ r.name }}
+		            </div>
+			        <div class="form-row field-email">
+			            <label class="required" for="id_email">Email:</label>
+			            {{ r.email }}
+			        </div>
+			        <div class="form-row field-mobileNumber">
+			            <label class="required" for="id_mobileNumber">Mobile Number:</label>
+			            {{ r.mobileNumber }}
+			        </div>
+			        <div class="form-row field-title">
+	            		<label class="required" for="id_title">Title:</label>
+	                    {{ r.title }}
+	                </div>
+	                <div class="form-row field-body">
+	            		<label class="required" for="id_body">Body:</label>
+	                    {{ r.body }}
+	                </div>
+			        <div class="form-row field-file">
+			            <label class="required" for="id_file">File:</label>
+			            <a href="/media/{{ r.file }}" target="_blank">{{ r.file }}</a>
+			        </div>
+				</fieldset>
+			{% endfor %}
 		</form>
 	</p>
 </div>
