--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="google-site-verification" content="eUL6D1CAMZ0aqHV1YfHCPV63d12U9iwq7RltC6M2BX4"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>{% block head_title %}Codebytes{% endblock head_title %}</title>
