--- a/src/templates/view_paper.html
+++ b/src/templates/view_paper.html
@@ -25,30 +25,19 @@
 			{% endif %}
 			{% for r in record %}
 				<fieldset class="module aligned ">
+					{{ r.id }}
+					{{ r.pk }}
 		    		<div class="form-row field-name">
 						<label class="required" for="id_name">Name:</label>
 		                {{ r.name }}
 		            </div>
-			        <div class="form-row field-email">
-			            <label class="required" for="id_email">Email:</label>
-			            {{ r.email }}
-			        </div>
-			        <div class="form-row field-mobileNumber">
-			            <label class="required" for="id_mobileNumber">Mobile Number:</label>
-			            {{ r.mobileNumber }}
-			        </div>
 			        <div class="form-row field-title">
 	            		<label class="required" for="id_title">Title:</label>
-	                    {{ r.title }}
+	                    <a href="{% url 'view_detail' pk=r.pk %}">{{ r.title }}</a>
 	                </div>
-	                <div class="form-row field-body">
-	            		<label class="required" for="id_body">Body:</label>
-	                    {{ r.body }}
+	                <div class="form-row field-title">
+	            		<a href="{% url 'view_detail' pk=r.pk %}">View Detatil</a>
 	                </div>
-			        <div class="form-row field-file">
-			            <label class="required" for="id_file">File:</label>
-			            <a href="/media/{{ r.file }}" target="_blank">{{ r.file }}</a>
-			        </div>
 				</fieldset>
 			{% endfor %}
 		</form>
