--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -16,6 +16,16 @@
 		<br>
 		<a href="{% url 'view_paper' %}">Back</a>
 		<br>
+		{% if message %}
+			<ul>
+				{% for m in messages %}
+					<li>
+						{{ m }}
+					</li>
+				{% endfor %}
+			</ul>
+		{% endif %}
+		{% if r is not None %}
 		<form action="" method="post"><input type="hidden">
 			{% csrf_token %}
 			<fieldset class="module aligned ">
@@ -45,7 +55,9 @@
 		            <a href="/media/{{ r.file }}" target="_blank">{{ r.file }}</a>
 		        </div>
 			</fieldset>
+			<a href="{% url 'delete_paper' pk=r.pk %}">Delete</a>
 		</form>
+		{% endif %}
 	</p>
 </div>
 {% endblock %}
