--- a/src/templates/view_paper.html
+++ b/src/templates/view_paper.html
@@ -10,25 +10,31 @@
 {% block content %}
 <div class="frame_artical">
 	<p>
-		Welcome {{ user.first_name }}
-		<br>
-		<a href="{% url 'submit_paper' %}">Submit Paper</a>
+		<h3>Welcome {{ user.first_name }}</h3>
+		{% if user.is_staff %}
+			<h3>You login as a Staff</h3>
+		{% else %}
+			<a href="{% url 'submit_paper' %}">Submit Paper</a>
+		{% endif %}
 		<br>
 		<form action="" method="post"><input type="hidden">
 			{% csrf_token %}
 			{% if messages %}
 				<ul>
-	                {% for m in messages %}
-	                	<li>{{ m }}</li>
-	                {% endfor %}
-            	</ul>
+					{% for m in messages %}
+						<li>
+							{{ m }}
+						</li>
+					{% endfor %}
+				</ul>
+            {% else %}
+				<h1><b>List of Paper</b></h1>
 			{% endif %}
 			{% for r in record %}
 				<fieldset class="module aligned ">
-					{{ r.id }}
-					{{ r.pk }}
+					{{ r.pk }}				
 		    		<div class="form-row field-name">
-						<label class="required" for="id_name">Name:</label>
+						<label class="required" for="id_name">Author Name:</label>
 		                {{ r.name }}
 		            </div>
 			        <div class="form-row field-title">
