--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 		<div class="frame_artical" style="order: 1;">
-			<a href="{% url 'welcome' %}">Visit this page</a>
+			<a href="{% url 'welcome' %}">Conference Page</a>
 		</div>
 		<!--<div class="frame_artical" style="order: 3;">
 			<small>Initiant Deletion for Windows</small>
