--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 		<div class="frame_artical" style="order: 1;">
-			<a href="{% url 'welcome' %}">Conference Page</a>
+			<a href="{% url 'conference:welcome' %}">Conference Page</a>
 		</div>
 		<!--<div class="frame_artical" style="order: 3;">
 			<small>Initiant Deletion for Windows</small>
@@ -17,9 +17,9 @@
 		</div>-->
 		<div class="frame_artical" style="order: 2;">
 			<small>Interesting Article in C</small>
-			<h3><a href="{% url 'spreadingnumber' %}">Spread the Digit from a Number without using any Arithmetic Operator or String</a></h3>
+			<h3><a href="{% url 'pages:spreadingnumber' %}">Spread the Digit from a Number without using any Arithmetic Operator or String</a></h3>
 			<p>Spread out all of the digits from the given number, without using any Arithmetic Operator or String.<b> Example:</b> Take the number <i>123456</i> and it became <i>1, 2, 3, 4, 5 and 6.</i><br>
-			<a href="{% url 'spreadingnumber' %}">Read more...</a></p>
+			<a href="{% url 'pages:spreadingnumber' %}">Read more...</a></p>
 		</div>
 		<div class="frame_artical" style="order: 4;">
 			<small>Interesting Article</small>
