--- a/src/templates/view_paper.html
+++ b/src/templates/view_paper.html
@@ -14,7 +14,7 @@
 		{% if user.is_staff %}
 			<h3>You login as a Staff</h3>
 		{% else %}
-			<a href="{% url 'submit_paper' %}">Submit Paper</a>
+			<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>
 		{% endif %}
 		<br>
 		<form action="" method="post"><input type="hidden">
@@ -39,10 +39,10 @@
 		            </div>
 			        <div class="form-row field-title">
 	            		<label class="required" for="id_title">Title:</label>
-	                    <a href="{% url 'view_detail' pk=r.pk %}">{{ r.title }}</a>
+	                    <a href="{% url 'conference:view_detail' pk=r.pk %}">{{ r.title }}</a>
 	                </div>
 	                <div class="form-row field-title">
-	            		<a href="{% url 'view_detail' pk=r.pk %}">View Detatil</a>
+	            		<a href="{% url 'conference:view_detail' pk=r.pk %}">View Detatil</a>
 	                </div>
 				</fieldset>
 			{% endfor %}
