--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,7 +20,7 @@
 			<div class="frame_003">
 				<ul>
 					{% if user.is_authenticated %}
-						<li>Welcome <a href="{% url 'conference:welcome' %}">{{ user.first_name }}</a></li>
+						<li>Welcome {{ user.first_name }}</li>
 					{% endif %}
 					<li><a href="{% url 'home' %}">Home</a></li>
 					{% if user.is_authenticated %}
