--- a/src/templates/submit_paper.html
+++ b/src/templates/submit_paper.html
@@ -9,49 +9,44 @@
 
 {% block content %}
 <div class="frame_artical">
-	<p>
-		Welcome {{ user.username }}
-		<br>
-		<a href="{% url 'conference:view_paper' %}">View Paper</a>
-		<br>
-		<br>
-		{% if messages %}
-			{% for m in messages %}
-				{{ m }}
-			{% endfor %}
-		{% endif %}
-		<form enctype="multipart/form-data" action="" method="post">
-			{% csrf_token %}
-			<fieldset class="module aligned ">
-	    		<div class="form-row field-name">
-					<label class="required" for="id_name">Name:</label>
-	                {{ record.name }}
-	            </div>
-		        <div class="form-row field-email">
-		            <label class="required" for="id_email">Email:</label>
-		            {{ record.email }}
-		        </div>
-		        <div class="form-row field-mobileNumber">
-		            <label class="required" for="id_mobileNumber">Mobile Number:</label>
-		            {{ record.mobileNumber }}
-		        </div>
-		        <div class="form-row field-title">
-            		<label class="required" for="id_title">Title:</label>
-                    {{ record.title }}
-                </div>
-                <div class="form-row field-body">
-            		<label class="required" for="id_body">Body:</label>
-                    {{ record.body }}
-                </div>
-		        <div class="form-row field-file">
-		            <label class="required" for="id_file">File:</label>
-		            {{ record.file }}
-		        </div>
-			</fieldset>
-			<div class="submit-row">
-				<input type="submit" value="Save" class="default" name="_save">
-			</div>
-		</form>
-	</p>
+    <h3>Welcome {{ user.first_name }}</h3>
+    {% if user.is_staff %}<h3>You login as a Staff</h3>{% endif %}
+	<a href="{% url 'conference:welcome' %}">Conference Page</a><br>
+	<a href="{% url 'conference:view_paper' %}">View Paper</a><br>
+    {% if not user.is_staff %}<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>{% endif %}<br><br>
+	{% if messages %}
+		{% for m in messages %}{{ m }}<br>{% endfor %}
+	{% endif %}
+	<form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
+	<fieldset class="module aligned ">
+		<div class="form-row field-name">
+			<label class="required" for="id_name">Name:</label>
+            {{ record.name }}
+        </div>
+        <div class="form-row field-email">
+            <label class="required" for="id_email">Email:</label>
+            {{ record.email }}
+        </div>
+        <div class="form-row field-mobileNumber">
+            <label class="required" for="id_mobileNumber">Mobile Number:</label>
+            {{ record.mobileNumber }}
+        </div>
+        <div class="form-row field-title">
+    		<label class="required" for="id_title">Title:</label>
+            {{ record.title }}
+        </div>
+        <div class="form-row field-body">
+    		<label class="required" for="id_body">Body:</label>
+            {{ record.body }}
+        </div>
+        <div class="form-row field-file">
+            <label class="required" for="id_file">File:</label>
+            {{ record.file }}
+        </div>
+	</fieldset>
+	<div class="submit-row">
+		<input type="submit" value="Save" class="default" name="_save">
+	</div>
+	</form>
 </div>
 {% endblock %}
