--- a/src/templates/welcome.html
+++ b/src/templates/welcome.html
@@ -9,18 +9,21 @@
 
 {% block content %}
 <div class="frame_artical">
-	<p>
-		Welcome {{ user.first_name }}
-		<br>
-		<a href="{% url 'conference:view_paper' %}">View Paper</a>
-		<br>
-		<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>
-	</p>
-	<form>
-		{% for r in record.paperRecord %}
-			{{ r.author }}
-			
+	<h3>Welcome {{ user.first_name }}</h3>
+	{% if user.is_staff %}
+		<h3>You login as a Staff</h3>
+	{% endif %}
+	<a href="{% url 'conference:view_paper' %}">View Paper</a><br>
+	{% if not user.is_staff %}<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>{% endif %}<br><br>
+	{% if messages %}
+		{% for m in messages %}{{ m }}<br>{% endfor %}
+    {% else %}
+    	<p>List of Paper to Review</p>
+		{% for r in record %}
+			Author Name: {{ r.author }}<br>
+			Title: <a href="{% url 'conference:review_paper' pk=r.pk %}">{{ r.title }}</a><br>
+			File: <a href="{% url 'conference:review_paper' pk=r.pk %}">Review Paper</a><br>
 		{% endfor %}
-	</form>
+	{% endif %}
 </div>
 {% endblock %}
