--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -17,36 +17,35 @@
 	{% if messages %}
 		{% for m in messages %}{{ m }}<br>{% endfor %}
 	{% endif %}
-	{% if r is not None %}
-	<form action="" method="post"><input type="hidden">{% csrf_token %}
-		<fieldset class="module aligned ">
-    		<div class="form-row field-name">
-				<label class="required" for="id_name">Name:</label>
-                {{ r.name }}
-            </div>
-	        <div class="form-row field-email">
-	            <label class="required" for="id_email">Email:</label>
-	            {{ r.email }}
-	        </div>
-	        <div class="form-row field-mobileNumber">
-	            <label class="required" for="id_mobileNumber">Mobile Number:</label>
-	            {{ r.mobileNumber }}
-	        </div>
-	        <div class="form-row field-title">
-        		<label class="required" for="id_title">Title:</label>
-                {{ r.title }}
-            </div>
-            <div class="form-row field-body">
-        		<label class="required" for="id_body">Body:</label>
-                {{ r.body }}
-            </div>
-	        <div class="form-row field-file">
-	            <label class="required" for="id_file">File:</label>
-	            <a href="/media/{{ r.file }}" target="_blank">{{ r.file }}</a>
-	        </div>
-		</fieldset>
-		<a href="{% url 'conference:delete_paper' pk=r.pk %}">Delete</a>
-	</form>
+	{% if record is not None %}
+	<h2>Detail of Paper:</h2>
+	<fieldset class="module aligned ">
+		<div class="form-row field-name">
+			<label class="required" for="id_name">Name:</label>
+            {{ record.name }}
+        </div>
+        <div class="form-row field-email">
+            <label class="required" for="id_email">Email:</label>
+            {{ record.email }}
+        </div>
+        <div class="form-row field-mobileNumber">
+            <label class="required" for="id_mobileNumber">Mobile Number:</label>
+            {{ record.mobileNumber }}
+        </div>
+        <div class="form-row field-title">
+    		<label class="required" for="id_title">Title:</label>
+            {{ record.title }}
+        </div>
+        <div class="form-row field-body">
+    		<label class="required" for="id_body">Body:</label>
+            {{ record.body }}
+        </div>
+        <div class="form-row field-file">
+            <label class="required" for="id_file">File:</label>
+            <a href="/media/{{ record.file }}" target="_blank">{{ record.file }}</a>
+        </div>
+	</fieldset>
+	<a href="{% url 'conference:delete_paper' pk=record.pk %}">Delete</a>
 	{% endif %}
 </div>
 {% endblock %}
