--- a/src/templates/welcome.html
+++ b/src/templates/welcome.html
@@ -10,15 +10,13 @@
 {% block content %}
 <div class="frame_artical">
 	<h3>Welcome {{ user.first_name }}</h3>
-	{% if user.is_staff %}
-		<h3>You login as a Staff</h3>
-	{% endif %}
+	{% if user.is_staff %}<h3>You login as a Staff</h3>{% endif %}
 	<a href="{% url 'conference:view_paper' %}">View Paper</a><br>
 	{% if not user.is_staff %}<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>{% endif %}<br><br>
+	<h2>List of Paper to Review</h2>
 	{% if messages %}
 		{% for m in messages %}{{ m }}<br>{% endfor %}
     {% else %}
-    	<p>List of Paper to Review</p>
 		{% for r in record %}
 			Author Name: {{ r.author }}<br>
 			Title: <a href="{% url 'conference:review_paper' pk=r.pk %}">{{ r.title }}</a><br>
