--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -50,7 +50,7 @@
     {% if userrecord is not None %}
         <h3>List of User to selete for review</h3>
         {% for r in userrecord %}
-            <a href="{% url 'conference:select_user' pk=record.pk user=r.username %}">{{ r.first_name }} {{ r.last_name }}</a><br>
+            <a href="{% url 'conference:select_user' paper_pk=record.pk user_pk=r.pk %}">Name: {{ r.first_name }} {{ r.last_name }}</a><br>
         {% endfor %} 
     {% endif %}
 </div>
