--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,8 @@
 {% block content %}
 <div class="frame_artical" style="order: 1;">
 	<a href="{% url 'conference:welcome' %}">Conference Page</a>
+	<br>
+	<a href="{% url 'pages:email' %}">Email</a>
 </div>
 <!--<div class="frame_artical" style="order: 3;">
 	<small>Initiant Deletion for Windows</small>
