--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -8,5 +8,6 @@
 	First Name: {{ user.first_name }}<br>
 	Last Name: {{ user.last_name }}<br>
 	Email: {{ user.email }}<br>
+	<a href="{% url 'account:edit_profile' %}">Edit profile</a>
 </div>
 {% endblock  %}
