--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -41,7 +41,7 @@
 	<!-- - - - - - - - - - - END - - - - - - - - - - - -->
 	</div>
 	<footer style="clear:both;">
-	<div class="frame_104">
+	<!--<div class="frame_104">
 		<div class="frame_105">
 			<div class="frame_101">
 				<a href="{% url 'home' %}"><h1>CodeBytes</h1><h3>Intresting Facts</h3></a>
@@ -61,8 +61,8 @@
 				<li><a href="">Privacy Policy</a></li><br>
 			</ul>
 		</div>
-	</div>
-	<small>&copy; 2018 Codebytes Group. All Rights Reserved.</small>
+	</div>-->
+	<small>&copy; 2018 Codebytes</small>
 	</footer>
 </body>
 </html>
