--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -40,8 +40,8 @@
 	{% block content %}{% endblock content %}
 	<!-- - - - - - - - - - - END - - - - - - - - - - - -->
 	</div>
-	<footer style="clear:both;">
-	<!--<div class="frame_104">
+	<!--<footer style="clear:both;">
+	<div class="frame_104">
 		<div class="frame_105">
 			<div class="frame_101">
 				<a href="{% url 'home' %}"><h1>CodeBytes</h1><h3>Intresting Facts</h3></a>
@@ -61,8 +61,8 @@
 				<li><a href="">Privacy Policy</a></li><br>
 			</ul>
 		</div>
-	</div>-->
+	</div>
 	<small>&copy; 2018 Codebytes</small>
-	</footer>
+	</footer>-->
 </body>
 </html>
