--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -10,10 +10,10 @@
 {% block content %}
 <div class="form">
     <h2>Login To Your Account</h2>{% if request.GET.next %}<h2>Required</h2>{% endif %}
-    <h3>{% if messages %}{% for m in messages %}{{ m }}<br>{% endfor %}{% endif %}</h3>
+    <h3>{% if messages %}{% for m in messages %}{{ m }}{% endfor %}{% endif %}</h3>
     <form method="post" action="">{% csrf_token %}
-        <input type="text" name="user" placeholder="Username"></input><br>
-        <input type="password" name="pass" placeholder="Password"></input><br>
+        <input type="text" name="user" placeholder="Username"></input>
+        <input type="password" name="pass" placeholder="Password"></input>
         {% if request.GET.next %}
             <input type="hidden" name="next" value="{{ request.GET.next }}">
         {% endif %}
