--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -1,13 +1,23 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block head_title %}Profile | {{ block.super }}{% endblock head_title %}
 
+{% block css %}
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+{% endblock %}
+
+
 {% block content %}
 <div class="frame_artical">
-	User Name: {{ user.username }}<br>
-	First Name: {{ user.first_name }}<br>
-	Last Name: {{ user.last_name }}<br>
-	Email: {{ user.email }}<br>
+	<ul>
+		<li>User Name: {{ user.username }}</li>
+		<li>First Name: {{ user.first_name }}</li>
+		<li>Last Name: {{ user.last_name }}</li>
+		<li>Email: {{ user.email }}</li>
+	</ul>
 	<a href="{% url 'account:edit_profile' %}">Edit profile</a>
+	<a href="{% url 'account:change_username' %}">Change Username</a>
+	<a href="{% url 'account:change_password' %}">Change Password</a>
 </div>
 {% endblock  %}
