--- a/src/templates/view_paper.html
+++ b/src/templates/view_paper.html
@@ -1,38 +1,39 @@
 {% extends "base.html" %}
-
+{% load staticfiles %}
 {% block head_title %}View Paper | {{ block.super }}{% endblock %}
 
 {% block css %}
-	<link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">
-	<link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 {% endblock %}
 
 {% block content %}
-<div class="frame_artical">
+<div class="frame">
 	<h3>Welcome {{ user.first_name }}</h3>
 	{% if user.is_staff %}<h3>You login as a Staff</h3>{% endif %}
 	<a href="{% url 'conference:welcome' %}">Conference Page</a><br>
-	<a href="{% url 'conference:view_paper' %}">View Paper</a><br>
 	{% if not user.is_staff %}<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>{% endif %}<br><br>
 	{% if messages %}
 		{% for m in messages %}{{ m }}<br>{% endfor %}
     {% else %}
 		<h1><b>List of Paper</b></h1>
 	{% endif %}
-	{% for r in record %}
-		<fieldset class="module aligned ">			
-    		<div class="form-row field-name">
-				<label class="required" for="id_name">Author Name:</label>
-                {{ r.name }}
-            </div>
-	        <div class="form-row field-title">
-        		<label class="required" for="id_title">Title:</label>
-                <a href="{% url 'conference:view_detail' pk=r.pk %}">{{ r.title }}</a>
-            </div>
-            <div class="form-row field-title">
-        		<a href="{% url 'conference:view_detail' pk=r.pk %}">View Detatil</a>
-            </div>
-		</fieldset>
-	{% endfor %}
+	<table>
+		<thead>
+			<tr>
+				<th>Author Name</th>
+				<th>Title</th>
+				<th>Detail</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for r in record %}
+			<tr>
+				<td>{{ r.name }}</td>
+				<td>{{ r.title }}</td>
+				<td><a href="{% url 'conference:view_detail' pk=r.pk %}">View Detatil</a></td>
+			</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 </div>
 {% endblock %}
