--- a/src/templates/503.html
+++ b/src/templates/503.html
@@ -1,5 +1,11 @@
----
-title: Page 503
-layout: error
-error: error-503
----
+{% extends "base.html" %}
+
+{% block head_title %}404 Page not Found | {{ block.super }}{% endblock head_title %}
+
+{% block content %}
+<div class="frame_artical">
+	<h1>Error 503</h1>
+	<br>
+	<a href="{% url 'home' %}">Home</a>
+</div>
+{% endblock  %}
