--- a/src/conference/templates/submit_paper.html
+++ b/src/conference/templates/submit_paper.html
@@ -1,52 +1,64 @@
 {% extends "base.html" %}
-
+{% load staticfiles %}
 {% block head_title %}Submit Paper | {{ block.super }}{% endblock %}
 
 {% block css %}
-	<link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">
-	<link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 {% endblock %}
 
 {% block content %}
-<div class="frame_artical">
+<div class="form" style="width: 85%;">
     <h3>Welcome {{ user.first_name }}</h3>
     {% if user.is_staff %}<h3>You login as a Staff</h3>{% endif %}
 	<a href="{% url 'conference:welcome' %}">Conference Page</a><br>
-	<a href="{% url 'conference:view_paper' %}">View Paper</a><br>
+	<a href="{% url 'conference:view_paper' %}">View all Paper</a><br>
     {% if not user.is_staff %}<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>{% endif %}<br><br>
 	{% if messages %}
 		{% for m in messages %}{{ m }}<br>{% endfor %}
 	{% endif %}
-	<form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
-	<fieldset class="module aligned ">
-		<div class="form-row field-name">
-			<label class="required" for="id_name">Name:</label>
-            {{ record.name }}
+    <h2>Author Information</h2>
+	
+    <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
+        <div style="width: 65%; margin: 0; padding: 10px; border-radius:15px; box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);">
+            <h2>Author 1*</h2>
+            <input type="text" name="name1" placeholder="Full Name*" required="True" maxlength="50"></input>
+            <input type="email" name="email1" placeholder="Email*" required="True" maxlength="50" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"></input>
+            <input type="text" name="mobile1" placeholder="Mobile Number*" maxlength="10" required="True"></input>
+            <input type="text" name="country1" placeholder="Country*" maxlength="50" required="True"></input>
+            <input type="text" name="org1" placeholder="Organization*" maxlength="100" required="True"></input>
+            <input type="url" name="url1" placeholder="URL" maxlength="50"></input>
         </div>
-        <div class="form-row field-email">
-            <label class="required" for="id_email">Email:</label>
-            {{ record.email }}
+        <br>
+        <div style="width: 65%; margin: 0; padding: 10px; border-radius:15px; box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);">
+            <h2>Author 2</h2>
+            <input type="text" name="name2" placeholder="Full Name" maxlength="50"></input>
+            <input type="email" name="email2" placeholder="Email" maxlength="50" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"></input>
+            <input type="text" name="mobile2" placeholder="Mobile Number" maxlength="10"></input>
+            <input type="text" name="country2" placeholder="Country" maxlength="50"></input>
+            <input type="text" name="org2" placeholder="Organization" maxlength="100"></input>
+            <input type="url" name="url2" placeholder="URL" maxlength="50"></input>
         </div>
-        <div class="form-row field-mobileNumber">
-            <label class="required" for="id_mobileNumber">Mobile Number:</label>
-            {{ record.mobileNumber }}
+        <br>
+        <div style="width: 65%; margin: 0; padding: 10px; border-radius:15px; box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);">
+            <h2>Author 3</h2>
+            <input type="text" name="name3" placeholder="Full Name" maxlength="50"></input>
+            <input type="email" name="email3" placeholder="Email" maxlength="50" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"></input>
+            <input type="text" name="mobile3" placeholder="Mobile Number" maxlength="10"></input>
+            <input type="text" name="country3" placeholder="Country" maxlength="50"></input>
+            <input type="text" name="org3" placeholder="Organization" maxlength="100"></input>
+            <input type="url" name="url3" placeholder="URL" maxlength="50"></input>
         </div>
-        <div class="form-row field-title">
-    		<label class="required" for="id_title">Title:</label>
-            {{ record.title }}
+        <br>
+        <div style="width: 85%; margin: 0; padding: 10px; border-radius:15px; box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);">
+            <h2>Upload File*</h2>
+            {{ paperform.title }}
+            {{ paperform.keywords }}<br>
+            {{ paperform.abstract }}
+            {{ paperform.file }}
+            
         </div>
-        <div class="form-row field-body">
-    		<label class="required" for="id_body">Body:</label>
-            {{ record.body }}
-        </div>
-        <div class="form-row field-file">
-            <label class="required" for="id_file">File:</label>
-            {{ record.file }}
-        </div>
-	</fieldset>
-	<div class="submit-row">
-		<input type="submit" value="Save" class="default" name="_save">
-	</div>
+        <br>
+    	<button type="submit" style="width: 100px;">Submit</button>
 	</form>
 </div>
 {% endblock %}
