--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,3 +1,4 @@
+/* FORM */
 body {
     background-size: cover;
     font-family: "Roboto";
@@ -45,11 +46,11 @@ body {
     box-sizing: border-box;
     font-weight: 400;
     transition: 0.2s linear;
-    &input:focus {
+}
+.form input:focus{
       color: #333;
       border: 1px solid #44c4e7;
     }
-}
 ul.errorlist{
     margin-top: -20px;
 }
