--- a/src/conference/templates/welcome.html
+++ b/src/conference/templates/welcome.html
@@ -12,8 +12,11 @@
 	<h3>Welcome {{ user.first_name }}</h3>
 	{% if user.is_staff %}<h3>You login as a Staff</h3>{% endif %}
 	<a href="{% url 'conference:view_paper' %}">View Paper</a><br>
-	{% if not user.is_staff %}<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>{% endif %}<br><br>
-	<h2>List of Paper to Review</h2>
-    
+	{% if user.is_authenticated %}
+		{% if not user.is_staff %}
+			<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>
+		{% endif %}<br>
+	{% endif %}<br>
+	
 </div>
 {% endblock %}
