--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -15,7 +15,7 @@
 	<header>
 	<div class="frame_001">
 		<div class="frame_002">
-			<a href="{% url 'home' %}"><h1>CodeBytes</h1><h3>Intresting Facts</h3></a>
+			<a href="{% url 'home' %}"><h1></h1><h3></h3></a>
 		</div>
 		<div class="frame_003">
 			<ul>
