--- a/src/conference/templates/userlist.html
+++ b/src/conference/templates/userlist.html
@@ -11,15 +11,19 @@
 	<h3>Welcome {{ user.first_name }}</h3>
 	{% if user.is_staff %}<h3>You login as a Staff</h3>{% endif %}
 	<a href="{% url 'conference:welcome' %}">Conference Page</a><br>
-	{% if not user.is_staff %}<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>{% endif %}<br><br>
-	{% if messages %}
-		{% for m in messages %}{{ m }}<br>{% endfor %}
-    {% else %}
-		<h1><b>List of Paper</b></h1>
-	{% endif %}
 
-	{% for list in userlist %}
-	{{ list }}<br>
+    {% if messages %}
+		{% for m in messages %}{{ m }}<br>{% endfor %}
+    {% endif %}
+
+    <h2>Selected User List </h2>
+    {% for list in list1 %}
+	<a href="{% url 'conference:selected_user' paper_pk=paper.pk user_pk=list.id %}">{{ list.first_name }}</a><br>
+	{% endfor %}
+    <h2>List of User to be selected</h2>
+
+    {% for list in list2 %}
+	<a href="{% url 'conference:selected_user' paper_pk=paper.pk user_pk=list.id %}">{{ list.first_name }}</a<br>
 	{% endfor %}
 
 </div>
