--- a/src/conference/templates/userlist.html
+++ b/src/conference/templates/userlist.html
@@ -16,15 +16,12 @@
             {% for m in messages %}{{ m }}<br>{% endfor %}
         {% endif %}
 
-        <h2>Selected User List </h2>
-        {% for list in list1 %}
-            <a href="{% url 'conference:selected_user' paper_pk=paper.pk user_pk=list.id %}">{{ list.first_name }}</a>
-            <br>
-        {% endfor %}
-        <h2>List of User to be selected</h2>
-
-        {% for list in list2 %}
-            <a href="{% url 'conference:selected_user' paper_pk=paper.pk user_pk=list.id %}">{{ list.first_name }}</a
+        <h2> User List </h2>
+        {% for list in userlist %}
+            {{ list.0.first_name }}
+            {% if list.1 %}{{ list.1 }}
+            {% else %}<a href="{% url 'conference:selected_user' paper_pk=paper.pk user_pk=list.0.id %}"> {{ list.1 }}</a>
+            {% endif %}
             <br>
         {% endfor %}
 
