--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,6 +9,7 @@
     <title>{% block head_title %}Codebytes{% endblock head_title %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'index.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     {% block css %}{% endblock css %}
 </head>
 <body>
